tests/sem/error/struct_return.c
struct ema {
	int a;
};

struct ema2 {
	int a;
};

struct ema main() {
	struct ema2 ema;
	return ema;
}
